# chainweaver

./: README.md  cabal.project  default.nix  obApp.nix
frontend/: frontend.cabal
frontend/src/: Frontend.hs
frontend/src/Common/: Network.hs  RefPath.hs  Route.hs
frontend/src/Frontend/: ReplGhcjs.hs  Servant.hs  Store.hs
frontend/src/Frontend/Crypto/: Browser.hs
frontend/src/Frontend/Storage/: Browser.hs  Class.hs
frontend/src/Frontend/Store/: TH.hs  V0.hs  V1.hs
frontend/src/Frontend/Store/V0/: Wallet.hs
frontend/src/Pact/Native/: Ops.hs
frontend/src/Pact/Server/: API.hs  ApiV1Client.hs
frontend/src/Pact/Types/: Command.hs  Hash.hs  Term.hs  Version.hs
