cabal-version: >= 1.10
name: frontend
version:             1.5.1.2
build-type: Simple
synopsis:            Frontend to the Pact smart contract language library
description:
            Pact is a transactional, database-focused, Turing-incomplete, interpreted language for smart contracts,
            logic to be deployed and executed on a blockchain/distributed ledger. For more information see
            <http://kadena.io/pact>.
homepage:            https://github.com/kadena-io/pact
bug-reports:         https://github.com/kadena-io/pact/issues
-- license:             BSD3
-- license-file:        LICENSE

library
  default-language: Haskell2010
  ghc-options: -O
  hs-source-dirs: src

  build-depends: base
               , aeson
               , aeson-gadt-th
               , bytestring
               , constraints
               , constraints-extras
               , containers
               , dependent-map
               , dependent-sum-aeson-orphans
               , jsaddle
               , lens
               , megaparsec
               , modern-uri
               , mtl
               , obelisk-frontend
               , obelisk-route
               , reflex-dom-core
               , servant
               , servant-client-core
               , servant-jsaddle
               , text

  exposed-modules: Frontend
                 , Frontend.Store.V0
    Common.Route
    Common.Network
    Common.RefPath

  ghc-options: -Wall
     -ddump-minimal-imports -dumpdir /home/lpsmith/ob/chainweaver/min-imports
  default-extensions: ScopedTypeVariables
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , LambdaCase
                    , DeriveDataTypeable
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , GeneralizedNewtypeDeriving
                    , MultiParamTypeClasses
                    , RankNTypes
                    , StandaloneDeriving
                    , TypeFamilies
                    , TypeApplications
                    , AllowAmbiguousTypes
                    , OverloadedStrings

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  default-language: Haskell2010

  build-depends: base
               , reflex-dom
               , obelisk-generated-static
               , obelisk-frontend
               , obelisk-route
               , text
               , frontend

  --TODO: Make these ghc-options optional
  ghc-options: -threaded -O -Wall
  if os(darwin)
     ghc-options: -dynamic
  -- Can and _should_ be re-enabled once
  -- https://github.com/ghcjs/ghcjs/issues/748 is fixed. -dedupe greatly
  -- reduces closure compile time, reduces final JS size quite a bit and
  -- improves page load times:
  if impl(ghcjs)
     ghcjs-options: -dedupe
