cabal-version: >= 1.10
name: frontend
version:             1.5.1.2
build-type: Simple
synopsis:            Frontend to the Pact smart contract language library
description:
            Pact is a transactional, database-focused, Turing-incomplete, interpreted language for smart contracts,
            logic to be deployed and executed on a blockchain/distributed ledger. For more information see
            <http://kadena.io/pact>.
homepage:            https://github.com/kadena-io/pact
bug-reports:         https://github.com/kadena-io/pact/issues
-- license:             BSD3
-- license-file:        LICENSE

executable frontend
  main-is: Frontend.hs
  hs-source-dirs: src-bin
  default-language: Haskell2010
  ghc-options: -threaded -O -Wall
  hs-source-dirs: src

  build-depends: base
               , aeson
               , aeson-gadt-th
               , bytestring
               , constraints
               , constraints-extras
               , dependent-map
               , dependent-sum-aeson-orphans
               , jsaddle
               , megaparsec
               , modern-uri
               , servant
               , servant-jsaddle
               , text

  other-modules:
    Frontend.Store.V0
    Common.Network
    Common.RefPath

  ghc-options: -Wall
     -ddump-minimal-imports -dumpdir /home/lpsmith/ob/chainweaver/min-imports
  default-extensions: ScopedTypeVariables
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , LambdaCase
                    , DeriveDataTypeable
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , GeneralizedNewtypeDeriving
                    , MultiParamTypeClasses
                    , RankNTypes
                    , StandaloneDeriving
                    , TypeFamilies
                    , TypeApplications
                    , AllowAmbiguousTypes
                    , OverloadedStrings

  if impl(ghcjs)
     ghcjs-options: -dedupe
