cabal-version: >= 1.10
name: frontend
version:             1.5.1.2
build-type: Simple
synopsis:            Frontend to the Pact smart contract language library
description:
            Pact is a transactional, database-focused, Turing-incomplete, interpreted language for smart contracts,
            logic to be deployed and executed on a blockchain/distributed ledger. For more information see
            <http://kadena.io/pact>.
homepage:            https://github.com/kadena-io/pact
bug-reports:         https://github.com/kadena-io/pact/issues
-- license:             BSD3
-- license-file:        LICENSE

executable frontend
  main-is: Frontend.hs
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends: base, ghcjs-base, ghcjs-prim
  other-modules:
    Frontend.Servant
  ghc-options: -Wall
  -- Need at least O1 for the dedupe bug to appear
    -- 1X1XZ
    -O1
    -- 11XZ
  --  -fno-strictness
    -- OK
  --  -fno-do-lambda-eta-expansion
  --  -fno-full-laziness
  if impl(ghcjs)
     ghcjs-options: -dedupe
